# emp-ag2pc

./: .gitignore  CMakeLists.txt
emp-ag2pc/: 2pc_dist.h  emp-ag2pc.h  metadata_file.h  partition_file.h
test/: demo.cpp  demo_1worker.cpp  demo_1worker_sort.cpp  demo_1worker_test.cpp  demo_orig_custom.cpp  demo_parallel.cpp  mpi_test.cpp
